logo and favicon setup

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Coming Soon - We're launching something amazing. Stay tuned!">
+    <meta name="description" content="Coming Soon">
     <title>Coming Soon | Launching Soon</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="weflut-logo.png" type="image/png">
+    <link rel="apple-touch-icon" href="weflut-logo.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -383,7 +385,7 @@
         <!-- Logo/Brand -->
         <div class="logo">
             <!-- Option 1: Use an image logo -->
-            <!-- <img src="logo.png" alt="Company Logo"> -->
+            <img src="weflut.png" alt="Company Logo">
             
             <!-- Option 2: Text-based logo (replace with your company name) -->
             <h3>Coming Soon</h3>
